--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ border-width: 20px;}
 <ul>
 <li>HOME</li>
 <li>MENU</li>
-<li>OUR STORY</li>
+<li><a href="aboutus.html">OUR STORY</a></li>
 <li><a href="contactus page.html">CONTACT US</a></li>
 <li class="hi"><img src="instagram.png" width="20px" height="20px"></li>
 <li class="hi"><img src="call.png" width="20px" height="20px"></li>
