--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ float:left;
 }
 li{
 font-size:20px;
-margin-left:100px;
+margin-left:125px;
 }
 ul{
 list-style:none;
 }
+
 body{
 overflow: scroll;
 background-repeat: no-repeat;
@@ -156,7 +157,19 @@ border-radius: 50px;
 	border-radius: 40px;
 	box-shadow: 10px 10px 10px rgba(244, 244, 243, 0.5);
 }
-
+.cake{
+	margin-left: 30px;
+	display: inline;
+	border-radius: 30px;
+	background-color: black;
+	margin-bottom: 100px;
+	box-shadow: 10px 10px 10px rgba(241, 241, 239, 0.5);
+}
+.cake2{
+	margin-left: 30px;
+	border-radius: 40px;
+	box-shadow: 10px 10px 10px rgba(244, 244, 243, 0.5);
+}
 .description{
 	text-decoration: underline;
 	font-style: italic;
@@ -167,6 +180,12 @@ border-radius: 50px;
 	margin-left: 1px;
 }
 .menuli{
+	padding: 10px;
+	margin-left: 1px;
+	width: 500px;
+	
+}
+.menul2{
 	padding: 10px;
 	margin-left: 1px;
 	width: 500px;
@@ -200,6 +219,7 @@ span{
 	cursor: pointer;
 	margin-top: 30px;
 	transition: border-width 3s;
+
 }
 #today:hover{
 	cursor: pointer;
@@ -210,13 +230,45 @@ span{
 	border-color: white;
 	border-width: 10px;
 	width:600px;
-border-width: 20px;}
+    border-width: 20px;
+}
 
 .menulii{
 	margin-left: 1px;
 }
+.menul{
+	margin-left: 1px;
+}
+.today1{
+	margin-right: 20%;
+
+}
+.dessets1{
+	margin-right: 20%;
+}
+.menul2{
+	margin-left: 1px;
+}
+#desserts:hover{
+	cursor: pointer;
+	color:white;
+	background-color: black;
+	color:white;
+	border-style: inset outset;
+	border-color: white;
+	border-width: 10px;
+	width:600px;
+    border-width: 20px;
+}
+
 .h22{
 	display:inline-block;
+}
+.h33{
+	display:inline-block
+}
+footer{
+	color:aliceblue;
 }
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -233,7 +285,7 @@ border-width: 20px;}
 <h1 class="tit">Slice of Spice<img src="chilli.png" width="70px" height="70px"></h1>
 <div class="menu">
 <ul>
-<li>HOME</li>
+<li><a href="index.html">HOME</a></li>
 <li>MENU</li>
 <li><a href="aboutus.html">OUR STORY</a></li>
 <li><a href="contactus page.html">CONTACT US</a></li>
@@ -307,9 +359,9 @@ border-width: 20px;}
 			<span class="Price">₹480 - ₹640</span>
 			<span class="Description">Domestic and foreign beer of you choice</span>
 		</li>
-	</ul></section>
+	</ul>
 </div>
-	
+	<!-- menu food-->
 </div>
 <div class="drmen" >
     <div id="drdiv">
@@ -356,9 +408,76 @@ border-width: 20px;}
 	<span class="Price">₹996</span>
 	<span class="Description">Your choice of beef or chicken.</span>
 </li>
+<li class="menuli">
+	<span class="dish"> Mutton Korma.</span>
+	<span class="Price">₹1200</span>
+	<span class="Description">A flavourful mutton curry, where the meat is stirred with curd, garlic-ginger paste, cloves, cardamom and cinnamon sticks.</span>
+</li>
+<li class="menuli">
+	<span class="dish"> Tandoori Lamb Chops.</span>
+	<span class="Price">₹980</span>
+	<span class="Description">Lamb chops marinated in strained yogurt and flavoursome masalas. Cooked till tender, this dish is guaranteed to impress..</span>
+</li>
 
 </ul></div>
+<!-- Desserts-->
+<div class="drmen" >
+    <div id="drdiv">
+		<img src="cake.jpg" width="500px" heigth="500px" class="cake">
+	<img src="cake2.jpg" width="500px" heigth="500px" class="cake2">
+	</div>
+<div id="desserts" class="desserts1">
+	
+<ul class="menul2">
+	<li><h2 class="h33">Desserts MENU</h2></li>
+	<li><h3 class="h33"> cakes and ice-creams</h3></li>
+<li class="menuli">
+	<span class="dish">Nachos</span>
+	<span class="Price">₹996</span>
+	<span class="Description">cheese, onions, tomotoes. 
+	</span>
+</li>
+<li class="menuli">
+	<span class="dish">Tacos.</span>
+	<span class="Price">₹996</span>
+	<span class="Description">chicken or beef with your choice of side.</span>
+</li>
+<li class="menuli">
+	<span class="dish">Chicken rice bowl.</span>
+	<span class="Price">₹1328</span>
+	<span class="Description">
+		brown rice, and veggies, served with choice or sauce 
+	</span>
+</li>
+<li class="menuli">
+	<span class="dish">Grilled chicken</span>
+	<span class="Price">₹1245</span>
+	<span class="Description">
+		Juicy grilled chicken served with choice of sauce.
+	</span>
+</li>
+<li class="menuli">
+	<span class="dish">Steak and fired beans.</span>
+	<span class="Price">₹1245</span>
+	<span class="Description">Steak and your choice of side.</span>
+</li>
+<li class="menuli">
+	<span class="dish">burrito.</span>
+	<span class="Price">₹996</span>
+	<span class="Description">Your choice of beef or chicken.</span>
+</li>
+<li class="menuli">
+	<span class="dish"> Mutton Korma.</span>
+	<span class="Price">₹1200</span>
+	<span class="Description">A flavourful mutton curry, where the meat is stirred with curd, garlic-ginger paste, cloves, cardamom and cinnamon sticks.</span>
+</li>
+<li class="menuli">
+	<span class="dish"> Tandoori Lamb Chops.</span>
+	<span class="Price">₹980</span>
+	<span class="Description">Lamb chops marinated in strained yogurt and flavoursome masalas. Cooked till tender, this dish is guaranteed to impress..</span>
+</li>
 
+</ul></div>
 
 </body>
 </html>
