--- a/index.html
+++ b/index.html
@@ -253,7 +253,6 @@ span{
 	cursor: pointer;
 	color:white;
 	background-color: black;
-	color:white;
 	border-style: inset outset;
 	border-color: white;
 	border-width: 10px;
@@ -392,7 +391,7 @@ footer{
 	</span>
 </li>
 <li class="menuli">
-	<span class="dish">Grilled chicken</span>
+	<span class="dish">Grilled chicken.</span>
 	<span class="Price">₹1245</span>
 	<span class="Description">
 		Juicy grilled chicken served with choice of sauce.
@@ -432,49 +431,48 @@ footer{
 	<li><h2 class="h33">Desserts MENU</h2></li>
 	<li><h3 class="h33"> cakes and ice-creams</h3></li>
 <li class="menuli">
-	<span class="dish">Nachos</span>
-	<span class="Price">₹996</span>
-	<span class="Description">cheese, onions, tomotoes. 
+	<span class="dish">Vegan chocolate cake</span>
+	<span class="Price">₹280</span>
+	<span class="Description">one made with 70% cocoa or higher, for example, with raspberry jam filling, and watch your clients fall in love.. 
 	</span>
 </li>
 <li class="menuli">
-	<span class="dish">Tacos.</span>
-	<span class="Price">₹996</span>
-	<span class="Description">chicken or beef with your choice of side.</span>
+	<span class="dish">Praline and ganache cake.</span>
+	<span class="Price">₹460</span>
+	<span class="Description">Pralines, which are almonds or hazelnuts mixed with caramelized sugar, and ganache.</span>
 </li>
 <li class="menuli">
-	<span class="dish">Chicken rice bowl.</span>
-	<span class="Price">₹1328</span>
+	<span class="dish">Blondie with vanilla ice cream.</span>
+	<span class="Price">₹260</span>
 	<span class="Description">
-		brown rice, and veggies, served with choice or sauce 
+		Actually, it's a brownie with less chocolate and more whole cane sugar.
 	</span>
 </li>
 <li class="menuli">
-	<span class="dish">Grilled chicken</span>
-	<span class="Price">₹1245</span>
+	<span class="dish">Re-invented cheesecake</span>
+	<span class="Price">₹640</span>
 	<span class="Description">
-		Juicy grilled chicken served with choice of sauce.
+		oreo topping,passion fruit jam.
 	</span>
 </li>
 <li class="menuli">
-	<span class="dish">Steak and fired beans.</span>
-	<span class="Price">₹1245</span>
+	<span class="dish">Tiramisu Layer Cake.</span>
+	<span class="Price">₹960</span>
 	<span class="Description">Steak and your choice of side.</span>
 </li>
 <li class="menuli">
-	<span class="dish">burrito.</span>
+	<span class="dish">White Chocolate Raspberry Cheesecake.</span>
 	<span class="Price">₹996</span>
-	<span class="Description">Your choice of beef or chicken.</span>
+	<span class="Description">"This was delicious! It was nice to go out to dinner and not have to order dessert because we knew this was waiting for us at home.</span>
 </li>
 <li class="menuli">
-	<span class="dish"> Mutton Korma.</span>
-	<span class="Price">₹1200</span>
-	<span class="Description">A flavourful mutton curry, where the meat is stirred with curd, garlic-ginger paste, cloves, cardamom and cinnamon sticks.</span>
-</li>
+	<span class="dish">Molten Chocolate Lava Cake.</span>
+	<span class="Price">₹690</span>
+	<span class="Description">chocolate,raspberry.</span>
 <li class="menuli">
-	<span class="dish"> Tandoori Lamb Chops.</span>
+	<span class="dish"> Chocolate Fondue.</span>
 	<span class="Price">₹980</span>
-	<span class="Description">Lamb chops marinated in strained yogurt and flavoursome masalas. Cooked till tender, this dish is guaranteed to impress..</span>
+	<span class="Description">This is an amazingly dark, rich and sinful fondue with a lot less fat. Make sure to use the best quality chocolate you can get your hands on, since that's the main flavor here.</span>
 </li>
 
 </ul></div>
