--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <style>
 .info{
-margin-left:500px;
+
 margin-top:300px;
 background:none;}
 .hi{
 background-color:white;
 border-radius:10px;
 color:black;
+
 }
 div{
 color:white;
@@ -21,7 +22,12 @@ float:left;
 li{
 font-size:20px;
 margin-left:125px;
+
 }
+h1{
+    text-align: center;
+}
+
 ul{
 list-style:none;
 }
@@ -29,7 +35,8 @@ list-style:none;
 body{
 overflow: scroll;
 background-repeat: no-repeat;
-background-size: cover;
+background-size: contain;
+background-color: black;
 }
 span{
 margin-left:70px;
@@ -49,7 +56,7 @@ text-decoration-color:white;
 
 }
 .menu{
-	
+	color: white;
 	position:fixed;
 }
 #menu{
@@ -123,6 +130,23 @@ border-radius: 50px;
 	flex-direction: row;
 	box-shadow: 10px 10px 10px rgb(247, 246, 245);
 }
+a{
+    color:white;
+    text-decoration: none;
+}
+.drmen1{
+	
+    border-radius: 50px;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        position: relative;
+        margin-top:30px;
+        flex-wrap: wrap;
+        flex-direction: row;
+        box-shadow: 10px 10px 10px rgb(247, 246, 245);
+    }
 
 .drink{
 	margin-left: 30px;
@@ -219,6 +243,8 @@ span{
 	cursor: pointer;
 	margin-top: 30px;
 	transition: border-width 3s;
+ 
+    
 
 }
 #today:hover{
@@ -231,6 +257,7 @@ span{
 	border-width: 10px;
 	width:600px;
     border-width: 20px;
+
 }
 
 .menulii{
@@ -266,8 +293,15 @@ span{
 .h33{
 	display:inline-block
 }
-footer{
-	color:aliceblue;
+
+.info{
+    background-color: rgba(0, 0, 0, 0.541);
+}
+.quote{
+    margin-left: 600px;
+}
+.hi1,a{
+    color:white;
 }
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -284,20 +318,20 @@ footer{
 <h1 class="tit">Slice of Spice<img src="chilli.png" width="70px" height="70px"></h1>
 <div class="menu">
 <ul>
-<li><a href="index.html">HOME</a></li>
-<li>MENU</li>
-<li><a href="aboutus.html">OUR STORY</a></li>
-<li><a href="contactus page.html">CONTACT US</a></li>
+<a href="index.html"><li class="hi1">HOME</li></a>
+<a href="menu1.html"><li class="hi1">MENU</li></a>
+<a href="aboutus.html"><li class="hi1">OUR STORY</li></a>
+<a href="contactus page.html"><li class="hi1">CONTACT US</li></a>
 <li class="hi"><img src="instagram.png" width="20px" height="20px"></li>
 <li class="hi"><img src="call.png" width="20px" height="20px"></li>
 <li class="hi"><img src="email.png" width="20px" height="20px"></li>
-<li class="hi"><img src="login.png" width="20px" height="20px"><a href="login website.html">Login</a></li>
+<a href="login website.html"><li class="hi"><img src="login.png" width="20px" height="20px"><a href="login website.html">Login</li></a>
 </ul>
 </div>
 
 <div class='info'>
 	<h1>Stunning food, Amazing Quality</h1>
-<span>
+<span class="quote">
 		Let us host your next special occasion
 	</span>
 
@@ -362,10 +396,10 @@ footer{
 </div>
 	<!-- menu food-->
 </div>
-<div class="drmen" >
+<div class="drmen1" >
     <div id="drdiv">
 		<img src="food.jpg" width="500px" heigth="500px" class="food">
-	<img src="food1.jpg" width="500px" heigth="500px" class="food1">
+	<img src="food1.jpg" width="500px" heigth="500px" class="food">
 	</div>
 <div id="today" class="today1">
 	
@@ -420,62 +454,7 @@ footer{
 
 </ul></div>
 <!-- Desserts-->
-<div class="drmen" >
-    <div id="drdiv">
-		<img src="cake.jpg" width="500px" heigth="500px" class="cake">
-	<img src="cake2.jpg" width="500px" heigth="500px" class="cake2">
-	</div>
-<div id="desserts" class="desserts1">
-	
-<ul class="menul2">
-	<li><h2 class="h33">Desserts MENU</h2></li>
-	<li><h3 class="h33"> cakes and ice-creams</h3></li>
-<li class="menuli">
-	<span class="dish">Vegan chocolate cake</span>
-	<span class="Price">₹280</span>
-	<span class="Description">one made with 70% cocoa or higher, for example, with raspberry jam filling, and watch your clients fall in love.. 
-	</span>
-</li>
-<li class="menuli">
-	<span class="dish">Praline and ganache cake.</span>
-	<span class="Price">₹460</span>
-	<span class="Description">Pralines, which are almonds or hazelnuts mixed with caramelized sugar, and ganache.</span>
-</li>
-<li class="menuli">
-	<span class="dish">Blondie with vanilla ice cream.</span>
-	<span class="Price">₹260</span>
-	<span class="Description">
-		Actually, it's a brownie with less chocolate and more whole cane sugar.
-	</span>
-</li>
-<li class="menuli">
-	<span class="dish">Re-invented cheesecake</span>
-	<span class="Price">₹640</span>
-	<span class="Description">
-		oreo topping,passion fruit jam.
-	</span>
-</li>
-<li class="menuli">
-	<span class="dish">Tiramisu Layer Cake.</span>
-	<span class="Price">₹960</span>
-	<span class="Description">Steak and your choice of side.</span>
-</li>
-<li class="menuli">
-	<span class="dish">White Chocolate Raspberry Cheesecake.</span>
-	<span class="Price">₹996</span>
-	<span class="Description">"This was delicious! It was nice to go out to dinner and not have to order dessert because we knew this was waiting for us at home.</span>
-</li>
-<li class="menuli">
-	<span class="dish">Molten Chocolate Lava Cake.</span>
-	<span class="Price">₹690</span>
-	<span class="Description">chocolate,raspberry.</span>
-<li class="menuli">
-	<span class="dish"> Chocolate Fondue.</span>
-	<span class="Price">₹980</span>
-	<span class="Description">This is an amazingly dark, rich and sinful fondue with a lot less fat. Make sure to use the best quality chocolate you can get your hands on, since that's the main flavor here.</span>
-</li>
 
-</ul></div>
 
 </body>
 </html>
