--- a/menu1.html
+++ b/menu1.html
@@ -30,7 +30,7 @@
                 <h5 class="price">₹220</h5>
             </div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-        <button>Add To Cart</button>
+        <button>Order Now</button>
 </div> </center>
 <center>
 <div class="food-items">
@@ -41,7 +41,7 @@
             <h5 class="price">₹325</h5>
         </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <button>Add To Cart</button>
+    <button>Order Now</button>
 </div></center>
 <center>
 <div class="food-items">
@@ -52,7 +52,7 @@
             <h5 class="price">₹996</h5>
         </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <button>Add To Cart</button>
+    <button>Order Now</button>
 </div>  </center>
 <center>
 <div class="food-items">
@@ -63,7 +63,7 @@
             <h5 class="price">₹480</h5>
         </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <button>Add To Cart</button>
+    <button>Order Now</button>
 </div>   
 </center>
 <div class="food-items">
@@ -74,7 +74,7 @@
             <h5 class="price">₹180</h5>
         </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <button>Add To Cart</button>
+    <button>Order Now</button>
 </div>   
 </body>
 </html>
