--- a/menu1.html
+++ b/menu1.html
@@ -19,7 +19,7 @@
                     <h5 class="price">₹180</h5>
                 </div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <button>Add To Cart</button>
+            <button>Order Now</button>
     </div> </center>
     <center>
     <div class="food-items">
