--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@ span{
 <a href="menu1.html"><li class="hi1">MENU</li></a>
 <a href="aboutus.html"><li class="hi1">OUR STORY</li></a>
 <a href="contactus page.html"><li class="hi1">CONTACT US</li></a>
-<li class="hi"><img src="instagram.png" width="20px" height="20px"></li>
+<a href="https://www.instagram.com/ketham_sanjay.24/"><li class="hi"><img src="instagram.png" width="20px" height="20px"></li></a>
 <li class="hi"><img src="call.png" width="20px" height="20px"></li>
-<li class="hi"><img src="email.png" width="20px" height="20px"></li>
+<a href="sanjayketham2004@gmail.com"><li class="hi"><img src="email.png" width="20px" height="20px"></li></a>
 <a href="login website.html"><li class="hi"><img src="login.png" width="20px" height="20px"><a href="login website.html">Login</li></a>
 </ul>
 </div>
