--- a/menu1.html
+++ b/menu1.html
@@ -26,7 +26,7 @@
         <img src="chicken.jpg">
         <div class="details">
             <div class="details-sub">
-                <h5>Chicken Masala Briyani</h5>
+                <h5>Chicken Masala Biryani</h5>
                 <h5 class="price">₹220</h5>
             </div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -66,6 +66,19 @@
     <button>Order Now</button>
 </div>   
 </center>
+<center>
+<div class="food-items">
+    <img src="chickentandoori.jpg">
+    <div class="details">
+        <div class="details-sub">
+            <h5>Chicken Tandoori</h5>
+            <h5 class="price">₹290</h5>
+        </div>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <button>Order Now</button>
+</div> 
+</center>
+<center>
 <div class="food-items">
     <img src="chickensoup.jpg">
     <div class="details">
@@ -75,6 +88,96 @@
         </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
     <button>Order Now</button>
-</div>   
+</div>
+</center>
+<center>
+    <div class="food-items">
+        <img src="burrito.jpg">
+        <div class="details">
+            <div class="details-sub">
+                <h5>Burrito.</h5>
+                <h5 class="price">₹180</h5>
+            </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+        <button>Order Now</button>
+    </div>
+    </center>
+
+    <center>
+        <div class="food-items">
+            <img src="arabianchickenalfaham.jpg">
+            <div class="details">
+                <div class="details-sub">
+                    <h5>Arabian Chicken Alfaham</h5>
+                    <h5 class="price">₹480</h5>
+                </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <button>Order Now</button>
+        </div>
+        </center>
+        
+        <center>
+            <div class="food-items">
+                <img src="chickenmandi.jpg">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Chicken Mandi biryani</h5>
+                        <h5 class="price">₹380</h5>
+                    </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <button>Order Now</button>
+            </div>
+            </center>
+            <center>
+                <div class="food-items">
+                    <img src="paneerjalfrezi.jpg">
+                    <div class="details">
+                        <div class="details-sub">
+                            <h5>paneerjalfrezi</h5>
+                            <h5 class="price">₹200</h5>
+                        </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <button>Order Nowt</button>
+                </div>
+                </center>
+            
+                <center>
+                    <div class="food-items">
+                        <img src="Veg-Biryani.jpg">
+                        <div class="details">
+                            <div class="details-sub">
+                                <h5>Veg Biryani</h5>
+                                <h5 class="price">₹180</h5>
+                            </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <button>Order Now</button>
+                    </div>
+                    </center>
+
+                    <center>
+                        <div class="food-items">
+                            <img src="paneerbiryani.jpg">
+                            <div class="details">
+                                <div class="details-sub">
+                                    <h5>Paneer Biryani</h5>
+                                    <h5 class="price">₹280</h5>
+                                </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            <button>Order Now</button>
+                        </div>
+                        </center>
+
+                        <center>
+                            <div class="food-items">
+                                <img src="paneer-tikka.jpg">
+                                <div class="details">
+                                    <div class="details-sub">
+                                        <h5>Paneer Tikka</h5>
+                                        <h5 class="price">₹180</h5>
+                                    </div>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                <button>Order Now</button>
+                            </div>
+                            </center>
 </body>
 </html>
