--- a/contactus page.html
+++ b/contactus page.html
@@ -1,8 +1,9 @@
 <html>
 <style>
 html{
-    background-image:url("food1.jpg");
+    background-repeat:no repeat;
     box-sizing: border-box;
+    background-size:cover;
 }  
 *{
     box-sizing: inherit;
@@ -82,7 +83,7 @@ input[type=submit]:focus{
   }
 }
 </style>
-<body>
+<body background="contactusback.jpg"></body>
 <form action="#" method="post"></form>
 <h1>Contact Us</h1>
 <p>Please take a moment to get in touch, we will get back to you shortly.</p>
@@ -114,6 +115,5 @@ input[type=submit]:focus{
     </label>
     <input type="submit" value="Send Message">
   </div>
-</body>
 </form>
 </html>
