--- a/contactus page.html
+++ b/contactus page.html
@@ -1,10 +1,11 @@
 <html>
 <style>
 html{
-    background-repeat:no repeat;
+    background-image:url("contactusback.jpg") ;
     box-sizing: border-box;
-    background-size:cover;
-}  
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 *{
     box-sizing: inherit;
 }
@@ -13,6 +14,8 @@ body{
     width: 90%;
     max-width: 800px;
     margin:90px auto;
+    box-shadow:black;
+    border-radius: 10px;
 }
 h1,p{
     text-align: center;
@@ -27,7 +30,7 @@ input,select,textarea{
     width:100%;
     padding:.3em;
     font-size:20px;
-    background-color: #fbfbfb;
+    background-color:white;
     border:solid 1px #ccc;
     resize:vertical;
 }
@@ -82,8 +85,10 @@ input[type=submit]:focus{
     float:left;
   }
 }
+.contact-1{
+}
 </style>
-<body background="contactusback.jpg"></body>
+<body>
 <form action="#" method="post"></form>
 <h1>Contact Us</h1>
 <p>Please take a moment to get in touch, we will get back to you shortly.</p>
@@ -115,5 +120,6 @@ input[type=submit]:focus{
     </label>
     <input type="submit" value="Send Message">
   </div>
+</body>
 </form>
 </html>
