--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,10 @@ htmL{
 }
 
 .one{
-    margin-left: 50%;
+   position: absolute;
+   width: 40%;
+   left: 700px;
+   top:20px;
 }
 h2{
     font-size: 50px;
@@ -19,9 +22,27 @@ footer{
     background-color:aliceblue;
     text-align: center;
     padding: 10%;
+    position: relative;
+    top:450px;
 }
 h3{
     text-align: center;
+}
+.itm{
+    position: relative;
+    top:300px;
+    
+}
+#h31{
+    position: relative;
+    top:280px;
+}
+#img1{
+    margin-right: 200px;
+}
+.hr1{
+    position: relative;
+    top:284px;
 }
 
 </style>
@@ -41,11 +62,11 @@ h3{
         
         <p>Clearly, not every restaurant’s roots are placed in something so dramatic as a daring escape from Sicily during WWII. Sometimes, a few friends just thought it would be cool to open a restaurant. But I’d argue that you can always find an interesting angle. For a good example, check out this About Us page that I wrote for a client, the Stonewall Motor Lodge.</p>
       </section>
-<h3>Delicious food</h3>
-<hr>
+<h3 id="h31">Delicious food</h3>
+<hr class="hr1">
 <div class="itm">
-<img src="item.jpg">
+<img src="item.jpg" id="img1">
 <img src="item2.png">
 </div>
-      <footer>&copy; Copyright 2023 slice of spice</footer>
+<footer>&copy; Copyright 2023 slice of spice</footer>
 </html>
