--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ float:left;
 }
 li{
 font-size:20px;
-margin-left:125px;
+margin-left:105px;
 
 }
 h1{
@@ -325,7 +325,8 @@ span{
 <a href="https://www.instagram.com/ketham_sanjay.24/"><li class="hi"><img src="instagram.png" width="20px" height="20px"></li></a>
 <li class="hi"><img src="call.png" width="20px" height="20px"></li>
 <a href="sanjayketham2004@gmail.com"><li class="hi"><img src="email.png" width="20px" height="20px"></li></a>
-<a href="login website.html"><li class="hi"><img src="login.png" width="20px" height="20px"><a href="login website.html">Login</li></a>
+<a href="login website.html" style="text-decoration: none; color: white;"><li class="hi"><img src="login.png" width="20px" height="20px"><a href="login website.html">Login</li></a>
+<a href="registration.html" style="text-decoration: none; color: white;"><li>SIGN UP</li></a>
 </ul>
 </div>
 
